AUX_SOURCE_DIRECTORY(. SRCS)

# 生成lib
ADD_LIBRARY(tinyxml SHARED ${SRCS})
#ADD_LIBRARY(tinyxml_static STATIC ${SRCS})
SET_TARGET_PROPERTIES(tinyxml PROPERTIES OUTPUT_NAME "tinyxml")
#SET_TARGET_PROPERTIES(tinyxml_static PROPERTIES OUTPUT_NAME "tinyxml")

# 设置动态库的版本号
SET_TARGET_PROPERTIES(tinyxml PROPERTIES VERSION 1.1 SOVERSION 1)

# 设置输出目录
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/lib)
